--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@react-google-maps/api": "^2.12.1",
     "@types/react-leaflet": "^2.8.2",
+    "@types/styled-components": "^5.1.34",
     "@vercel/analytics": "^0.1.3",
     "aos": "^2.3.4",
     "battery": "^0.1.0",
@@ -27,6 +29,7 @@
     "react-scroll": "^1.8.8",
     "react-timer-hook": "^3.0.5",
     "serve": "^14.0.1",
+    "styled-components": "^6.1.12",
     "systeminformation": "^5.12.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
